5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1691_1949.log
== TEST (2019-04-24 15:54:28) 
-- CODE:
x=int(input("Digite o numero apostado: "))
y=int(input("Digite o numero sorteado: "))
t=x//10
p=x%10
q=y//10
g=y%10
if(x==y):
	print("Ganhou R$ 100.000,00")
elif(t==g)and(p==q):
	print("Ganhou R$ 50.000,00")
elif(t==q)or(t==g)or(p==q)or(p==g):
	print("Ganhou R$ 1.000,00)
else:
	print("Perdeu")
-- ERROR:
File "XXXX", line 12
    print("Ganhou R$ 1.000,00)
                             ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:54:39) 
-- CODE:
x=int(input("Digite o numero apostado: "))
y=int(input("Digite o numero sorteado: "))
t=x//10
p=x%10
q=y//10
g=y%10
if(x==y):
	print("Ganhou R$ 100.000,00")
elif(t==g)and(p==q):
	print("Ganhou R$ 50.000,00")
elif(t==q)or(t==g)or(p==q)or(p==g):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
Ganhou R$ 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:54:50) 
-- CODE:
x=int(input("Digite o numero apostado: "))
y=int(input("Digite o numero sorteado: "))
t=x//10
p=x%10
q=y//10
g=y%10
if(x==y):
	print("Ganhou R$ 100.000,00")
elif(t==g)and(p==q):
	print("Ganhou R$ 50.000,00")
elif(t==q)or(t==g)or(p==q)or(p==g):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- EXECUTION TIME:
0.145711
-- TEST CASE 1:
---- input:
55
55
---- correct output:
Ganhou R$ 100.000,00
---- user output:
Ganhou R$ 100.000,00
-- TEST CASE 2:
---- input:
78
89
---- correct output:
Ganhou R$ 1.000,00
---- user output:
Ganhou R$ 1.000,00
-- TEST CASE 3:
---- input:
12
56
---- correct output:
Perdeu
---- user output:
Perdeu
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 01:18:27) 
-- CODE:
x=int(input("Digite o numero apostado: "))
y=int(input("Digite o numero sorteado: "))
t=x//10
p=x%10
q=y//10
g=y%10
if(x==y):
	print("Ganhou R$ 100.000,00")
elif(t==g)and(p==q):
	print("Ganhou R$ 50.000,00")
elif(t==q)or(t==g)or(p==q)or(p==g):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- EXECUTION TIME:
0.196881
-- TEST CASE 1:
---- input:
55
55
---- correct output:
Ganhou R$ 100.000,00
---- user output:
Ganhou R$ 100.000,00
-- TEST CASE 2:
---- input:
78
89
---- correct output:
Ganhou R$ 1.000,00
---- user output:
Ganhou R$ 1.000,00
-- TEST CASE 3:
---- input:
12
56
---- correct output:
Perdeu
---- user output:
Perdeu
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
